add social buttons

--- a/index.html
+++ b/index.html
@@ -435,7 +435,11 @@
             <p class="contacts-data-text">cookbook@gmail.com</p>
           </div>
         </div>
-        <div class="social-buttons"></div>
+        <div class="social-buttons">
+          <i class="fab fa-instagram fa-2x social-button"></i>
+          <i class="fab fa-facebook-f fa-2x social-button"></i>
+          <i class="fab fa-vk fa-2x social-button"></i>
+        </div>
         <div class="copyright"><span id="year"></span> &copy; Все права защищены</div>
       </div>
     </footer>
